--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,9 @@ set(allfold_SOURCE
 set(SIMFOLD_HOME ${CMAKE_SOURCE_DIR}/src/simfold)
 add_definitions("-DSIMFOLD_HOME=\"${SIMFOLD_HOME}\"")
 
+# set path for executable to be created
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+
 # create executables
 add_executable(allFold ${allfold_SOURCE})
 
