Updated KnotAli to a more clean an expansive version, added command line parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,23 +8,30 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+include_directories("${CMAKE_SOURCE_DIR}")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/simfold")
+
+
 # create simfold library
 add_subdirectory(simfold)
 
-set(allfold_SOURCE
-    W_final.h W_final.cpp 
-    pseudo_loop.h pseudo_loop.cpp 
-    V_final.h V_final.cpp 
-    VM_final.h VM_final.cpp 
-    h_common.h h_common.cpp 
-    hfold_validation.h hfold_validation.cpp 
-    hfold_iterative.h 
-    include/mutual_information.h bin/mutual_information.cpp
-    include/CalculateProbability.h bin/CalculateProbability.cpp
-    include/ArrayOperations.h bin/ArrayOperations.cpp
-    include/allFold.h bin/allFold.cpp
-    include/utils.h bin/utils.cpp
-    bin/main.cpp
+set(iterative_SOURCE
+    Iterative/W_final.cpp 
+    Iterative/pseudo_loop.cpp 
+    Iterative/V_final.cpp 
+    Iterative/VM_final.cpp 
+    Iterative/h_common.cpp 
+    Iterative/hfold_validation.cpp 
+)
+
+set(KnotAli_SOURCE
+    ${iterative_SOURCE}
+    mutual_information.cc
+    CalculateProbability.cc
+    ArrayOperations.cc
+    utils.cc
+    cmdline.cc
+    main.cc
 )
 
 # pass SIMFOLD_HOME to binary
@@ -32,13 +39,13 @@ set(SIMFOLD_HOME ${CMAKE_SOURCE_DIR}/src/simfold)
 add_definitions("-DSIMFOLD_HOME=\"${SIMFOLD_HOME}\"")
 
 # set path for executable to be created
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 # create executables
-add_executable(allFold ${allfold_SOURCE})
+add_executable(KnotAli ${KnotAli_SOURCE})
 
 # enable C++11
-#target_compile_features(allFold PRIVATE cxx_nullptr)
+#target_compile_features(KnotAli PRIVATE cxx_nullptr)
 
 # link to simfold
-target_link_libraries(allFold LINK_PUBLIC simfold)
+target_link_libraries(KnotAli LINK_PUBLIC simfold)
