fixed ability to run SparseRNAFold within KnotAli from outside directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -fconcepts \ -std=c++2a")
+add_compile_options(-fconcepts -std=c++2a -O3 -w)
 
 
 add_subdirectory(src)
