--- a/src/SparseRNAFolD/CMakeLists.txt
+++ b/src/SparseRNAFolD/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(SparseRNAFolD)
 
-cmake_minimum_required(VERSION 3.8)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# cmake_minimum_required(VERSION 3.8)
+# set(CMAKE_CXX_STANDARD 17)
+# set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
