--- a/src/simfold/CMakeLists.txt
+++ b/src/simfold/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Ian Wark July 6 2017
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -w")
 
 SET(SOURCE
   simfold.cpp
