removed use of auto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,12 @@ cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(USE_CLANG "build application with clang" OFF) # OFF is the default
 
-if(USE_CLANG)
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -std=c++17 \ -O3")
 else()
     set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -O3  \ -std=c++17 ")
-endif(USE_CLANG)
+endif()
 
 
 add_subdirectory(src)
