--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories("${CMAKE_SOURCE_DIR}")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/simfold")
 
 # set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -w")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -O2")
 
 
 # create simfold library
