--- a/src/simfold/CMakeLists.txt
+++ b/src/simfold/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Ian Wark July 6 2017
-
+project(simfold)
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -w")
 
@@ -14,15 +14,10 @@ SET(SOURCE
   src/simfold/s_sub_folding.cpp src/simfold/s_partition_function.cpp
 )
 
-
 # pass SIMFOLD_HOME to binary
-set(SIMFOLD_HOME ${CMAKE_CURRENT_SOURCE_DIR})
+set(SIMFOLD_HOME ${simfold_SOURCE_DIR})
 add_definitions("-DSIMFOLD_HOME=\"${SIMFOLD_HOME}\"")
 
-# set location to make .a file
-# set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
-# set location to make executable file
-# set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 # create library at LIBRARY_OUTPUT_PATH
 add_library (simfold ${SOURCE})
