--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -std=c++17")
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -std=c++17 \ -O3")
 else()
-    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -std=c++17")
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -std=c++17 \ -O3")
 endif()
 
 
