--- a/src/SparseRNAFolD/CMakeLists.txt
+++ b/src/SparseRNAFolD/CMakeLists.txt
@@ -2,7 +2,7 @@ project(SparseRNAFolD)
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -O3")
+# set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -O3")
 
 set(sparseRNAfolD_SOURCE
     src/cmdline.cc
